Use RTCCameraPreview for localVideoView

--- a/Whale/Info.plist
+++ b/Whale/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>Need Camera for video call</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need Microphone for call</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
